--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
-    "react-native-navbar": "^1.6.0"
+    "react-native-navbar": "^1.6.0",
+    "react-redux": "^5.0.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
