--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.40.0",
     "react-native-navbar": "^1.6.0",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
